--- a/Book Reading UI/Book Reading UI/Areas/Security/Views/Authentication/Login.cshtml
+++ b/Book Reading UI/Book Reading UI/Areas/Security/Views/Authentication/Login.cshtml
@@ -1,9 +1,10 @@
-﻿
+﻿@model Book_Reading_Event_DAO.User
+
 @{
     ViewBag.Title = "Login";
 }
 
-    <style type="text/css">
+@* <style type="text/css">
         .login-dark {
             background: linear-gradient(145deg, #575b5d, #252b2d);
         }
@@ -26,18 +27,13 @@
                         <div class="form-group">
                             <input type="password" class="form-control form-control-sm bg-light" placeholder="Password">
                         </div>
-                        @* <div class="form-group form-check">
-                            <input type="checkbox" class="form-check-input" id="rememberCheckBox">
-                            <label class="form-check-label text-light" for="rememberCheckBox">Remember me?</label>
-                        </div> *@
+
                         <div class="mt-5">
                             <button class="btn btn-sm btn-light col">
                                 Login
                             </button>
                         </div>
-                        @* <div class="text-center mt-2">
-                            <a href="#" class="text-warning">Forgot Password?</a>
-                        </div> *@
+
 
                         <div class="mt-5">
                             <p class="text-white text-center">
@@ -47,4 +43,40 @@
                     </form>
                 </div>
             </div>
+        </div> *@
+
+
+<h2>Login </h2>
+
+@using (Html.BeginForm("Validate", "Authentication", FormMethod.Post))
+{
+    @Html.AntiForgeryToken()
+
+    <div class="form-horizontal">
+        <h4>User</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.UserEmail, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.UserEmail, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.UserEmail, "", new { @class = "text-danger" })
+            </div>
         </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.UserPassword, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.UserPassword, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.UserPassword, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Login" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
+}
