Public Event Detail Url Linked

--- a/Book Reading UI/Book Reading UI/Areas/User/Views/Events/PublicEvents.cshtml
+++ b/Book Reading UI/Book Reading UI/Areas/User/Views/Events/PublicEvents.cshtml
@@ -57,7 +57,7 @@
             @Html.DisplayFor(modelItem => item.EventDuration)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.EventType)
+            @Html.DisplayFor(modelItem => item.EventDate)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.EventStartTime)
