--- a/Book Reading UI/Book Reading UI/Areas/User/Views/Events/ViewMyEvent.cshtml
+++ b/Book Reading UI/Book Reading UI/Areas/User/Views/Events/ViewMyEvent.cshtml
@@ -77,9 +77,12 @@
             @Html.DisplayFor(modelItem => item.EventActive)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.EventId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.EventId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.EventId })
+            @Html.ActionLink("Edit", "Edit", new { id = item.EventId }) |
+            @Html.ActionLink("Details", "Details", new { id = item.EventId }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.EventId }) |
+            @if (item.EventType == 1) {
+                Html.ActionLink("Invite User", "Delete", new { id = item.EventId });
+            }
         </td>
     </tr>
 }
