--- a/Book Reading UI/Book Reading UI/Areas/User/Views/Events/ViewMyEvent.cshtml
+++ b/Book Reading UI/Book Reading UI/Areas/User/Views/Events/ViewMyEvent.cshtml
@@ -7,7 +7,7 @@
 <h2>ViewMyEvent</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Index")
 </p>
 <table class="table">
     <tr>
@@ -77,7 +77,7 @@
             @Html.DisplayFor(modelItem => item.EventActive)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.EventId }) |
+            @Html.ActionLink("Edit Event", "Edit", new { id = item.EventId }) |
             @Html.ActionLink("Details", "Details", new { id = item.EventId }) |
             @Html.ActionLink("Delete", "Delete", new { id = item.EventId }) |
             @if (item.EventType == 1) {
