--- a/Book Reading UI/Book Reading UI/Views/Shared/_Layout.cshtml
+++ b/Book Reading UI/Book Reading UI/Views/Shared/_Layout.cshtml
@@ -25,7 +25,23 @@
 
                     <li>@Html.ActionLink("Create Event", "Index", new { Controller = "Events", Area = "User" })</li>
                     <li>@Html.ActionLink("Login", "Login", new { Controller = "Authentication", Area = "Security" })</li>
+                    <li>@Html.ActionLink("Logout", "Logout", new { Controller = "Authentication", Area = "Security" })</li>
                     <li>@Html.ActionLink("Register", "Register", new { Controller = "Authentication", Area = "Security" })</li>
+
+
+
+                    <li>@Html.ActionLink("View My Events", "ViewMyEvent", new { Controller = "Events", Area = "User" })</li>
+                    <li>@Html.ActionLink("Public Events", "PublicEvents", new { Controller = "Events", Area = "User" })</li>
+                    <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+                    <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+                    <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+                    <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+                    <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+                    <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+                    <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+                    <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+                    <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+                    <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
                 </ul>
             </div>
         </div>
