--- a/Book Reading UI/Book Reading UI/Content/Site.css
+++ b/Book Reading UI/Book Reading UI/Content/Site.css
@@ -1,18 +1,270 @@
-﻿body {
+﻿/* body {
     padding-top: 50px;
     padding-bottom: 20px;
-}
+} */
 
 /* Set padding to keep content from hitting the edges */
-.body-content {
+/* .body-content {
     padding-left: 15px;
     padding-right: 15px;
-}
+} */
 
 /* Set width on the form input elements since they're 100% wide by default */
-input,
+/* input,
 select,
 textarea {
     max-width: 280px;
+} */
+
+
+/* Navigation Bar CSS*/
+/* body {
+    width: 80%;
+    margin: auto;
+    background-color: #000;
 }
 
+navbar {
+    padding: 0px !important;
+    -webkit-box-shadow: 4px 9px 25px -6px rgba(77,77,77,0.61);
+    -moz-box-shadow: 4px 9px 25px -6px rgba(77,77,77,0.61);
+    box-shadow: 4px 9px 25px -6px rgba(77,77,77,0.61);
+}
+
+ul.dropdown-menu {
+    width: 11vw;
+    border-radius: 0px;
+    font-weight: 400;
+    font-size: 0.9em;
+    line-height: 16px;
+    text-decoration: none;
+    padding: 0px;
+    list-style-type: none;
+    -webkit-animation: mymove 0.5s;
+    animation: mymove 0.5s;
+    background-color: #fff;
+    -webkit-box-shadow: 4px 9px 25px -6px rgba(77,77,77,0.61);
+    -moz-box-shadow: 4px 9px 25px -6px rgba(77,77,77,0.61);
+    box-shadow: 4px 9px 25px -6px rgba(77,77,77,0.61);
+}
+
+li.dropdown:hover ul.dropdown-menu {
+    display: block;
+}
+
+.dropdown-menu li:hover a {
+    color: #ec5626;
+}
+
+.dropdown-menu li {
+    border-bottom: 1px solid #ccc;
+    padding: 20px;
+    display: block;
+}
+
+    .dropdown-menu li a {
+        color: #444;
+        text-decoration: none;
+        text-transform: capitalize;
+    }
+
+@keyframes mymove {
+    from {
+        left: 100px;
+        height: 0px;
+        opacity: 0;
+        border-bottom: 0px;
+    }
+
+    to {
+        height: auto;
+    }
+}
+
+.navbar-nav a.nav-link {
+    font-family: 'Roboto', sans-serif;
+    text-transform: uppercase;
+    padding: 0px !important;
+}
+
+ul.navbar-nav li.nav-item {
+    margin: 0 20px;
+}
+
+ul.navbar-nav .nav-item:after {
+    content: '';
+    display: block;
+    height: 3px;
+    width: 0;
+    transition: width .5s ease, background-color .5s ease;
+}
+
+.navbar-nav .nav-item:hover:after {
+    width: 100%;
+    background: #eb3719;
+} */
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background: #ddd;
+}
+
+/** 
+ * Nav
+ */
+.post-it {
+    padding-left: 100px;
+    padding-top: 100px;
+    margin-bottom: -20px;
+}
+
+    .post-it > li {
+        list-style: none;
+        float: left;
+        width: 120px;
+        overflow: hidden;
+        text-decoration: none;
+        position: relative;
+        margin-left: -55px;
+        box-shadow: 2px 0px 1px rgba(0,0,0,0.5);
+        -webkit-transform-origin: top left;
+        -moz-transform-origin: top left;
+        -o-transform-origin: top left;
+        transform-origin: top left;
+        -webkit-transform: rotate(-40deg);
+        -moz-transform: rotate(-40deg);
+        -o-transform: rotate(-40deg);
+        transform: rotate(-40deg);
+        -webkit-transition: all 0.3s ease;
+        -moz-transition: all 0.3s ease;
+        -o-transition: all 0.3s ease;
+        transition: all 0.3s ease;
+    }
+
+        .post-it > li.active {
+            z-index: 2;
+        }
+
+        .post-it > li:hover,
+        .post-it > li:focus,
+        .post-it > li.active {
+            box-shadow: 10px 0px 6px rgba(0,0,0,0.5);
+            -webkit-transform: rotate(-40deg) scalex(.95);
+            -mox-transform: rotate(-40deg) scalex(.95);
+            -o-transform: rotate(-40deg) scalex(.95);
+            transform: rotate(-40deg) scalex(.95);
+        }
+
+        .post-it > li > a {
+            color: rgba(255,255,255,0.5);
+            display: block;
+            width: 100%;
+            padding: 10px 20px;
+            white-space: nowrap;
+            font-family: Impact "Trebuchet MS";
+            text-decoration: none;
+            background: rgba(0,0,0, .4);
+            -webkit-transition: all .3s ease;
+            -moz-transition: all .3s ease;
+            -o-transition: all .3s ease;
+            transition: all .3s ease;
+        }
+
+            .post-it > li > a:hover,
+            .post-it > li > a:focus,
+            .post-it > li.active > a {
+                color: white;
+                background: rgba(255,255,255,0);
+            }
+
+        .post-it > li:nth-child(1) {
+            background: #FF0000;
+        }
+
+        .post-it > li:nth-child(2) {
+            background: #FF3300;
+        }
+
+        .post-it > li:nth-child(3) {
+            background: #FFCC00;
+        }
+
+        .post-it > li:nth-child(4) {
+            background: #009933;
+        }
+
+        .post-it > li:nth-child(5) {
+            background: #0066CC;
+        }
+
+        .post-it > li:nth-child(6) {
+            background: #000099;
+        }
+
+        .post-it > li:nth-child(7) {
+            background: #9900CC;
+        }
+
+        .post-it > li:nth-child(8) {
+            background: #000000;
+        }
+
+    .post-it::after {
+        content: "";
+        display: block;
+        clear: both;
+    }
+
+@media (max-width: 400px) {
+    .post-it {
+        padding-left: 0px;
+        padding-top: 0px;
+        margin-left: 0px;
+        margin-bottom: 10px;
+    }
+
+        .post-it > li {
+            clear: both;
+            width: 100%;
+            margin-left: 0;
+            -webkit-transform-origin: bottom left;
+            -moz-transform-origin: bottom left;
+            -o-transform-origin: bottom left;
+            transform-origin: bottom left;
+            -webkit-transform: rotate(0deg);
+            -moz-transform: rotate(0deg);
+            -o-transform: rotate(0deg);
+            transform: rotate(0deg);
+        }
+
+            .post-it > li:hover,
+            .post-it > li:focus {
+                box-shadow: 0px -6px 10px rgba(0,0,0,0.5);
+            }
+
+            .post-it > li > a {
+                text-align: center;
+                padding-left: 0px;
+            }
+
+        .post-it .active {
+            -webkit-transform: skew(-20deg);
+            -moz-transform: skew(-20deg);
+            -o-transform: skew(-20deg);
+            transform: skew(-20deg);
+        }
+}
+
+/**
+ * Note
+ */
+.note {
+    background: #fff;
+    height: 200px;
+    padding-top: 30px;
+    position: relative;
+}
