--- a/Book Reading UI/Book Reading UI/Views/Shared/_Layout.cshtml
+++ b/Book Reading UI/Book Reading UI/Views/Shared/_Layout.cshtml
@@ -5,59 +5,126 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
 
+    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+
+
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Book Reading", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+    <div class="container">
+
+        @* Navigation Bar*@
+        <ul class="post-it">
+            <li class="active">@Html.ActionLink("Home", "Index", "Home")</li>
+            <li>@Html.ActionLink("Create Event", "Index", new { Controller = "Events", Area = "User" })</li>
+            <li>@Html.ActionLink("Login", "Login", new { Controller = "Authentication", Area = "Security" })</li>
+            <li>@Html.ActionLink("Logout", "Logout", new { Controller = "Authentication", Area = "Security" })</li>
+            <li>@Html.ActionLink("Register", "Register", new { Controller = "Authentication", Area = "Security" })</li>
+
+            <li>@Html.ActionLink("View My Events", "ViewMyEvent", new { Controller = "Events", Area = "User" })</li>
+            <li>@Html.ActionLink("Public Events", "PublicEvents", new { Controller = "Events", Area = "User" })</li>
+            <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+            <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+            <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+            <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+            <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+            <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+
+        @* <li><a href="#">SUNDAY</a></li>
+        <li><a href="#">MONDAY</a></li>
+        <li><a href="#">TUESDAY</a></li>
+        <li><a href="#">WENDSDAY</a></li>
+        <li><a href="#">THURSDAY</a></li>
+        <li class="active"><a href="#">FRIDAY</a></li>
+        <li><a href="#">SATERDAY</a></li> *@
+
+
+
+
+
+        </ul>
+
+
+
+        @* <div class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    @Html.ActionLink("Book Reading", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
+
+                        <li>@Html.ActionLink("Create Event", "Index", new { Controller = "Events", Area = "User" })</li>
+                        <li>@Html.ActionLink("Login", "Login", new { Controller = "Authentication", Area = "Security" })</li>
+                        <li>@Html.ActionLink("Logout", "Logout", new { Controller = "Authentication", Area = "Security" })</li>
+                        <li>@Html.ActionLink("Register", "Register", new { Controller = "Authentication", Area = "Security" })</li>
+
+
+
+                        <li>@Html.ActionLink("View My Events", "ViewMyEvent", new { Controller = "Events", Area = "User" })</li>
+                        <li>@Html.ActionLink("Public Events", "PublicEvents", new { Controller = "Events", Area = "User" })</li>
+                        <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+                        <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+                        <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+                        <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+                        <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+                        <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+                        <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+                        <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+                        <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+                        <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+                    </ul>
+                </div>
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+        </div> *@
 
-                    <li>@Html.ActionLink("Create Event", "Index", new { Controller = "Events", Area = "User" })</li>
-                    <li>@Html.ActionLink("Login", "Login", new { Controller = "Authentication", Area = "Security" })</li>
-                    <li>@Html.ActionLink("Logout", "Logout", new { Controller = "Authentication", Area = "Security" })</li>
-                    <li>@Html.ActionLink("Register", "Register", new { Controller = "Authentication", Area = "Security" })</li>
+        @* <nav class="navbar navbar-expand-sm bg-light navbar-light">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Portfilo</a>
+                </li>
 
-
-
-                    <li>@Html.ActionLink("View My Events", "ViewMyEvent", new { Controller = "Events", Area = "User" })</li>
-                    <li>@Html.ActionLink("Public Events", "PublicEvents", new { Controller = "Events", Area = "User" })</li>
-                    <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
-                    <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
-                    <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
-                    <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
-                    <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
-                    <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
-                    <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
-                    <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
-                    <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
-                    <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
-                </ul>
-            </div>
+                <li class="nav-item dropdown">
+                    <a class="nav-link " data-toggle="dropdown" href="#">Services</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Website Designing</a></li>
+                        <li><a href="#">Website Development</a></li>
+                        <li><a href="#">Content Writing</a></li>
+                        <li><a href="#">PPC Services</a></li>
+                        <li><a href="#">SMO</a></li>
+                        <li><a href="#">SEO</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+            </ul>
+        </nav> *@
+        <div class="body-content">
+            @RenderBody()
+            <hr />
+            <footer>
+                <p>&copy; @DateTime.Now.Year - Bok Reading Event</p>
+            </footer>
         </div>
     </div>
 
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 
 </html>
