--- a/Book Reading UI/Book Reading UI/Views/Shared/_Layout.cshtml
+++ b/Book Reading UI/Book Reading UI/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -19,12 +21,26 @@
         @* Navigation Bar*@
         <ul class="post-it">
             <li class="active">@Html.ActionLink("Home", "Index", "Home")</li>
-            <li>@Html.ActionLink("Create Event", "Index", new { Controller = "Events", Area = "User" })</li>
-            <li>@Html.ActionLink("Login", "Login", new { Controller = "Authentication", Area = "Security" })</li>
-            <li>@Html.ActionLink("Logout", "Logout", new { Controller = "Authentication", Area = "Security" })</li>
-            <li>@Html.ActionLink("Register", "Register", new { Controller = "Authentication", Area = "Security" })</li>
 
-            <li>@Html.ActionLink("View My Events", "ViewMyEvent", new { Controller = "Events", Area = "User" })</li>
+
+            @*((Book_Reading_UI.Controllers.CreatedFunction)this.ViewContext.Controller).CheckLoginUser()*@
+            @{
+                Book_Reading_UI.Controllers.CreatedFunction testuser = new Book_Reading_UI.Controllers.CreatedFunction();
+
+                bool userlogeedin = testuser.CheckLoginUser();
+                if (userlogeedin)
+                {
+                    <li>@Html.ActionLink("Create Event", "Index", new { Controller = "Events", Area = "User" })</li>
+                    <li>@Html.ActionLink("View My Events", "ViewMyEvent", new { Controller = "Events", Area = "User" })</li>
+                    <li>@Html.ActionLink("Logout", "Logout", new { Controller = "Authentication", Area = "Security" })</li>
+                }
+                else
+                {
+                    <li>@Html.ActionLink("Register", "Register", new { Controller = "Authentication", Area = "Security" })</li>
+                    <li>@Html.ActionLink("Login", "Login", new { Controller = "Authentication", Area = "Security" })</li>
+                }
+            }
+
             <li>@Html.ActionLink("Public Events", "PublicEvents", new { Controller = "Events", Area = "User" })</li>
             <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
             <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
@@ -78,7 +94,7 @@
             @RenderBody()
             <hr />
             <footer>
-                <p>&copy; @DateTime.Now.Year - Bok Reading Event</p>
+                <p>&copy; @DateTime.Now.Year - Book Reading Event</p>
             </footer>
         </div>
     </div>
