--- a/Book Reading UI/Book Reading UI/Views/Shared/_Layout.cshtml
+++ b/Book Reading UI/Book Reading UI/Views/Shared/_Layout.cshtml
@@ -42,12 +42,12 @@
             }
 
             <li>@Html.ActionLink("Public Events", "PublicEvents", new { Controller = "Events", Area = "User" })</li>
+            <li>@Html.ActionLink("Upcoming Events", "UpcomingEvents", new { Controller = "Events", Area = "User" })</li>
+            <li>@Html.ActionLink("Past Events", "PastEvents", new { Controller = "Events", Area = "User" })</li>
+            @* <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
             <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
             <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
-            <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
-            <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
-            <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
-            <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+            <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li> *@
         </ul>
 
 
