Ucoming Events View

--- a/Book Reading UI/Book Reading UI/Areas/User/Views/Events/UpcomingEvents.cshtml
+++ b/Book Reading UI/Book Reading UI/Areas/User/Views/Events/UpcomingEvents.cshtml
@@ -62,6 +62,9 @@
         <td>
             @Html.DisplayFor(modelItem => item.EventStartTime)
         </td>
+        <td>
+            @Html.ActionLink("View Event Details", "ViewPublicDetail", new { id = item.EventId })
+        </td>
     </tr>
 }
 
