--- a/Book Reading UI/Book Reading UI/Areas/User/Views/Events/Index.cshtml
+++ b/Book Reading UI/Book Reading UI/Areas/User/Views/Events/Index.cshtml
@@ -96,7 +96,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "ViewMyEvent")
 </div>
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
