--- a/Book Reading UI/Book Reading UI/Views/Shared/_Layout.cshtml
+++ b/Book Reading UI/Book Reading UI/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Book Reading Event</title>
 
     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
@@ -18,7 +18,6 @@
 
         @* Navigation Bar*@
         <ul class="post-it">
-            <li class="active">@Html.ActionLink("Home", "Index", "Home")</li>
 
 
             @*((Book_Reading_UI.Controllers.CreatedFunction)this.ViewContext.Controller).CheckLoginUser()*@
@@ -26,14 +25,13 @@
                 Book_Reading_UI.Controllers.CreatedFunction testuser = new Book_Reading_UI.Controllers.CreatedFunction();
 
                 bool userlogeedin = testuser.CheckLoginUser();
-                if (userlogeedin)
-                {
+                if (userlogeedin) {
+                    <li class="active">@Html.ActionLink("Home", "Home", new { controller = "Events", area = "User" })</li>
                     <li>@Html.ActionLink("Create Event", "Index", new { Controller = "Events", Area = "User" })</li>
                     <li>@Html.ActionLink("View My Events", "ViewMyEvent", new { Controller = "Events", Area = "User" })</li>
                     <li>@Html.ActionLink("Logout", "Logout", new { Controller = "Authentication", Area = "Security" })</li>
-                }
-                else
-                {
+                } else {
+                    <li class="active">@Html.ActionLink("Home", "Index", new { controller = "Home", area = "common" })</li>
                     <li>@Html.ActionLink("Register", "Register", new { Controller = "Authentication", Area = "Security" })</li>
                     <li>@Html.ActionLink("Login", "Login", new { Controller = "Authentication", Area = "Security" })</li>
                 }
@@ -43,9 +41,9 @@
             <li>@Html.ActionLink("Upcoming Events", "UpcomingEvents", new { Controller = "Events", Area = "User" })</li>
             <li>@Html.ActionLink("Past Events", "PastEvents", new { Controller = "Events", Area = "User" })</li>
             @* <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
-            <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
-            <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
-            <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li> *@
+        <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+        <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+        <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li> *@
         </ul>
 
 
@@ -92,7 +90,7 @@
             @RenderBody()
             <hr />
             <footer>
-                <p>&copy; @DateTime.Now.Year - Book Reading Event</p>
+                <p>&copy; @DateTime.Now.ToString("yyyy-MM-dd") - Book Reading Event</p>
             </footer>
         </div>
     </div>
