--- a/Book Reading UI/Book Reading UI/Views/Shared/_Layout.cshtml
+++ b/Book Reading UI/Book Reading UI/Views/Shared/_Layout.cshtml
@@ -88,7 +88,7 @@
             @RenderBody()
             <hr />
             <footer>
-                <p>&copy; @DateTime.Now.ToString("yyyy-MM-dd") - Book Reading Event</p>
+                <p>&copy; @DateTime.Now.Year - Book Reading Event</p>
             </footer>
         </div>
     </div>
