Past Events View

--- a/Book Reading UI/Book Reading UI/Areas/User/Views/Events/PastEvents.cshtml
+++ b/Book Reading UI/Book Reading UI/Areas/User/Views/Events/PastEvents.cshtml
@@ -36,36 +36,43 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.User.UserName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EventName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EventDescription)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EventOtherDetails)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EventLocation)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EventDuration)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EventDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EventStartTime)
-        </td>
-        <td>
-            @Html.ActionLink("View Details", "ViewPublicDetail", new { id = item.EventId })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
 
+        var eventDate = item.EventDate.ToString("yyyy-MM-dd");
+        var currentDate = DateTime.Now.ToString("yyyy-MM-dd");
+        DateTime eDate = Convert.ToDateTime(eventDate);
+        DateTime cDate = Convert.ToDateTime(currentDate);
+        if (eDate < cDate) {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.User.UserName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EventName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EventDescription)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EventOtherDetails)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EventLocation)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EventDuration)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EventDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EventStartTime)
+                </td>
+                <td>
+                    @Html.ActionLink("View Details", "ViewPublicDetail", new { id = item.EventId })
+                </td>
+            </tr>
+        }       
+    }
 </table>
