--- a/Book Reading UI/Book Reading UI/Views/Shared/_Layout.cshtml
+++ b/Book Reading UI/Book Reading UI/Views/Shared/_Layout.cshtml
@@ -40,10 +40,11 @@
             <li>@Html.ActionLink("Public Events", "PublicEvents", new { Controller = "Events", Area = "User" })</li>
             <li>@Html.ActionLink("Upcoming Events", "UpcomingEvents", new { Controller = "Events", Area = "User" })</li>
             <li>@Html.ActionLink("Past Events", "PastEvents", new { Controller = "Events", Area = "User" })</li>
-            @* <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
-        <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
-        <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
-        <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li> *@
+            
+            <li>@Html.ActionLink("View Users", "AllUsers", new { Controller = "Admin", Area = "Admin" })</li>
+            <li>@Html.ActionLink("View All Events", "AllEvents", new { Controller = "Admin", Area = "Admin" })</li>
+            <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+            <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
         </ul>
 
         @* <div class="navbar navbar-inverse navbar-fixed-top">
