--- a/Book Reading UI/Book Reading UI/Views/Shared/_Layout.cshtml
+++ b/Book Reading UI/Book Reading UI/Views/Shared/_Layout.cshtml
@@ -43,8 +43,7 @@
             
             <li>@Html.ActionLink("View Users", "AllUsers", new { Controller = "Admin", Area = "Admin" })</li>
             <li>@Html.ActionLink("View All Events", "AllEvents", new { Controller = "Admin", Area = "Admin" })</li>
-            <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
-            <li>@Html.ActionLink("Register", "Register", new { Controller = "Events", Area = "User" })</li>
+            <li>@Html.ActionLink("View Invitations", "AllInvitations", new { Controller = "Admin", Area = "Admin" })</li>
         </ul>
 
         @* <div class="navbar navbar-inverse navbar-fixed-top">
